[package]
name = "cm256"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["simd"]
simd = []
# Enable Wirehair for comparison benchmarks
# Note: Wirehair requires SSE4.1, so this feature doesn't work on WASM
compare = ["wirehair-wrapper"]


[dependencies]
raptorq = { version = "2.0.0" }
wirehair-wrapper = { version = "0.1.3", optional = true }

[dev-dependencies]
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
